[tool.poetry]
name = "picture-sort"
version = "0.1.0"
description = ""
authors = ["sumarokov-vp <sumarokov.vp@gmail.com>"]
readme = "README.md"
packages = [{include = "picture_sort"}]

[tool.poetry.dependencies]
python = "^3.11"
exifread = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
